--- a/src/main/resources/templates/template1.html
+++ b/src/main/resources/templates/template1.html
@@ -19,7 +19,7 @@
   <!-- Links -->
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" th:href="@{patients}">home</a>
+      <a class="nav-link" th:href="@{patients}">patients</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">doctors</a>
